--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ author:
   name             : "Zhengyangguang(Laurence) Gong"
   pronouns         : "he/him" 
   bio              : "君子终日乾乾，夕惕若厉，无咎"
-  location         : "Munich, Germany"
-  employer         : "Max Planck Institute for Extraterrestrial Physics"
+  location         : "Tucson, U.S."
+  employer         : "Steward Observatory, University of Arizona"
   uri              : # URL
-  email            : "lgong@usm.lmu.de" 
+  email            : "zgong@arizona.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
