Shorten employer name in config file

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : "he/him" 
   bio              : "君子终日乾乾，夕惕若厉，无咎"
   location         : "Tucson, U.S."
-  employer         : "Steward Observatory, University of Arizona"
+  employer         : "Steward Observatory, UofA"
   uri              : # URL
   email            : "zgong@arizona.edu" 
 
